--- a/pt1_basic_skill/templates.yaml
+++ b/pt1_basic_skill/templates.yaml
@@ -5,3 +5,5 @@ round: Can you repeat the numbers {{ numbers|join(", ") }} backwards?
 win: Good job!
 
 lose: Sorry, that's the wrong answer.
+
+bye: Ok, see you next time!
