--- a/pt2_slots_and_context/templates.yaml
+++ b/pt2_slots_and_context/templates.yaml
@@ -12,6 +12,7 @@ utter_answer_request: I'm not able to help you with that right now, maybe in the
 
 utter_ask_book: Do you want me to book for {{people}} {{cuisine}} in the {{location}} area?
 
-utter_booked: Ok. You are all set. Booking was successful.
+utter_booked: Ok. You are all set. Booking was successful. Do you want to try another booking?
 
 utter_goodbye: Ok. Goodbye
+
